# biocdeniz.github.io

./: README.md  app.py  index.html  pyproject.toml
static/: style.css
templates/: index.html
